Update Example Theme

--- a/Dashboard_Compile.Rmd
+++ b/Dashboard_Compile.Rmd
@@ -3,7 +3,7 @@ title: "US-China Competition: Investments"
 output: 
   flexdashboard::flex_dashboard:
     vertical_layout: scroll
-    theme: bootstrap
+    theme: cosmo
 ---
 
 ```{r setup, include=FALSE}
