Update Example Theme

--- a/Dashboard_Compile.Rmd
+++ b/Dashboard_Compile.Rmd
@@ -24,7 +24,7 @@ Overview
 ### Age of Competition?
 Tensions between China and the United States continue to make headlines on a frequent basis, and we can continue to expect this mounting tension to continue. On the economic front, the ongoing [US-China Trade War](https://thediplomat.com/2021/03/the-us-china-trade-war-is-still-happening/) is an oft cited consequence of this tension. Through this dashboard, we hope to shed light into another economic frontier of the competition between the US and China -- their foreign investments to other countries, around the world. 
 
-China's continued growth, and success in establishing itself as a global superpower is contingent on the volume of its foreign direct investment. Beyond being one way that China might continue to gain influence, foreign investments are one key way for China to [garner more strategies resources, which will increase its economic competitiveness](https://thediplomat.com/2020/01/the-investment-war-with-china-assessing-american-pressure/).
+China's continued growth, and success in establishing itself as a global superpower is contingent on the volume of its foreign direct investment. Beyond being one way that China might continue to gain influence, foreign investments are one key way for China to [garner more strategic resources, which will increase its economic competitiveness](https://thediplomat.com/2020/01/the-investment-war-with-china-assessing-american-pressure/).
 
 Claims on the volume of foreign investments, both by China and the United States, are best mapped out with data. In this dashboard, we map out the contours of the US-China competition in investments. We do this at the level of the entire world, and also at the level of a single continent, Africa, where both US and Chinese Investments have been [on the rise over the years](https://www.forbes.com/sites/earlcarr/2020/09/04/the-us-versus-chinese-investment-in-africa/?sh=2efe223965d4); it is one key part of the world where experts expect [US-China competition to intensify](https://www.cnbc.com/2019/10/09/the-us-china-trade-rivalry-is-underway-in-africa.html).
 
