uploading africa part

--- a/ChinaWatchers_Dashboard.Rmd
+++ b/ChinaWatchers_Dashboard.Rmd
@@ -440,11 +440,77 @@ Next Frontier: Africa
 ### Commentary
 
 What do we know about how China is investing in Africa?
-
-### Frame 3 
+### Global pattern holds in Africa as well
 
 ```{r}
+# libraries
+library(plotly)
+library(tidyr)
+library(dplyr)
+library(ggmap)
+library(countrycode)
+library(tmap)
+library(geojsonio)
 
+# data manipulation
+china_africa_stock = readxl::read_xlsx("./data/FDIData_08Jan2021.xlsx", skip=1, n_max=30)
+china_africa_stock = china_africa_stock %>% select(where(function(x) !all(is.na(x)))) %>% rename("year"="US$ mn, unadjusted")
+china_africa_flow = readxl::read_xlsx("./data/FDIData_08Jan2021.xlsx", skip=1, n_max=30, sheet=2)
+china_africa_flow = china_africa_flow %>% select(where(function(x) !all(is.na(x)))) %>% rename("year"="US$ mn, unadjusted")
+
+china_africa_sector = readxl::read_xlsx("./data/FDIData_08Jan2021.xlsx", skip=1, n_max=31, sheet=3)
+china_africa_sector %>% select(where(function(x) x[1]!="%"))
+china_africa = cbind(china_africa_stock["year"], china_africa_stock["Total, US$ bn"], china_africa_flow["Total, US$ bn"])
+names(china_africa) = c("year", "stock", "flow")
+
+us_africa = readxl::read_xlsx("./data/FDIData_08Jan2021.xlsx", skip=1, n_max=30, sheet=6)
+us_africa = us_africa %>% rename("year"="US$ bn, unadjusted", "flow"="Flows*", "stock"="Stock")
+
+
+china_africa_long = pivot_longer(china_africa, 2:3, names_to="fdi_type", values_to="investment_amount")
+china_africa_long$country="China"
+
+us_africa_long = pivot_longer(us_africa, 2:3, names_to="fdi_type", values_to="investment_amount")
+us_africa_long$country="US"
+
+totals = rbind(china_africa_long, us_africa_long)
+```
+
+
+```{r}
+stock_plot = ggplot(filter(totals, fdi_type=="stock", year >=2003), aes(x=year, y=investment_amount, fill=country)) +
+  geom_bar(aes(fill=country), stat="identity") +
+  ggthemes::theme_tufte() +
+  labs(x= "Year", y="Investment amount in billions of USD, unadjusted",
+       title="FDI in Africa by Year: Stock") + 
+  scale_x_continuous(breaks=2003:2019) + 
+  scale_y_continuous(labels=scales::unit_format(unit="b"))
+
+ggplotly(stock_plot)
+```
+
+```{r}
+flow_plot = ggplot(filter(totals, fdi_type=="flow", year >= 2003), aes(x=year, y=investment_amount, fill=country)) +
+  geom_bar(aes(fill=country), stat="identity") +
+  ggthemes::theme_tufte() +
+  labs(x= "Year", y="Investment amount in billions of USD, unadjusted",
+       title="FDI in Africa by Year: Flow") + 
+  scale_x_continuous(breaks=2003:2019) +
+  scale_y_continuous(labels=scales::unit_format(unit="b"))
+
+ggplotly(flow_plot)
+```
+
+```{r}
+top_10_stock = china_stock_long %>% group_by(country) %>% summarize(max=max(stock_investment)) %>% arrange(desc(max)) %>% head(10) %>% select(country) %>% unlist()
+by_country_stock = china_stock_long %>% filter(country %in% top_10_stock) %>%
+  plot_ly(x=~year, y=~stock_investment, split=~country, type = "scatter", mode='lines') %>%
+  # add_annotations(x=0, y=-.1, xref="paper", yref="paper", text=caption, showarrow=FALSE) %>%
+  layout(
+    title="Top 10 most invested African countries by year: Stock",
+    yaxis=list(title="Investment Amount (US$ million, unadjusted)")
+  )
+by_country_stock
 ```
 
 Data Sources and Repo Link
